@@ -43,6 +43,7 @@ export("%.%",anova.gam, bam, bam.update,bandchol, betar,
        Predict.matrix.random.effect,
        Predict.matrix.t2.smooth,
        Predict.matrix.gp.smooth,
+       psum.chisq,
        qq.gam,
        residuals.gam,rig,rTweedie,rmvn, 
        Rrank,s,scat,sdiag,"sdiag<-",
